<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".RegisterActivity">

<!--    Register Judul -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:text="@string/register_account" />

<!--    Nama-->
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nama" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="4.5"
            android:inputType="text"
            android:hint="@string/masukan_nama" />

    </LinearLayout>

<!--    Username -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvUsernameReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/usernameReg"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="8"
            android:inputType="text"
            android:hint="@string/masukan_username" />

    </LinearLayout>

<!--    Password -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvPasswordReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/passwordReg" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="8"
            android:inputType="textPassword"
            android:hint="@string/masukan_password"/>

    </LinearLayout>

<!--    Gender -->
        <RadioGroup
            android:id="@+id/rgGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />

        </RadioGroup>

<!--    Nomor Hp-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nomor_hp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:hint="@string/masukan_nomor_hp"
            android:inputType="number"
            android:layout_weight="8" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Email" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="4"
            android:hint="Masukan Email"
            android:inputType="textEmailAddress" />

    </LinearLayout>

<!--    Alamat-->
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/alamat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alamat"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="start"
            android:inputType="textMultiLine"
            android:lines="4"
            android:scrollbars="vertical"
            android:hint="@string/masukan_alamat" />

    </LinearLayout>

<!--    Syarat & Ketentuan-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/saya_menyetujui_atas_syarat_ketentuan" />

    </LinearLayout>

<!--    Button -->
    <Button
        android:id="@+id/btnRegist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/r_e_g_i_s_t_e_r" />

</LinearLayout>